Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -320,7 +320,7 @@
 </div>
 
 
-    <a href="How-miamor-works.html" class="mil-btn mil-m mil-add-arrow mil-adaptive-right" onclick="storeFullname()" type="button">Join Now!</a>
+    <a href="miamor_payment_gateway.html" class="mil-btn mil-m mil-add-arrow mil-adaptive-right" onclick="storeFullname()" type="button">Join Now!</a>
   </form>
 
   <div class="card review-section">
