How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -501,7 +501,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 💙Automated withdrawals: Fully Deployed✅<br>
       </div>
     </div>
-    <a href=""><button class="join-btn">SUBSCRIBE MIAMOR PLUS</button></a>
+    <a href="Miamor-form.html"><button class="join-btn">SUBSCRIBE MIAMOR PLUS</button></a>
 
   <div class="profiles">
     <div class="profile-box slide-in-left pre-animate">
@@ -530,7 +530,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 ❤️ Authomated Withdrawals : Fully Deployed✅<br>
       </div>
     </div>
-    <a href=""><button class="join-btn">SUBSCRIBE MIAMOR PLUS</button></a>
+    <a href="Miamor-form.html"><button class="join-btn">SUBSCRIBE MIAMOR PLUS</button></a>
     
   </div>
 
@@ -540,10 +540,10 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
     <div class="footer-content">
       <img src="Milogo.png" alt="MiAmor Logo" class="footer-logo" />
       <div class="social-icons">
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-        <a href="#"><i class="fab fa-tiktok"></i></a>
-        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="Miamor-form.html"><i class="fab fa-whatsapp"></i></a>
+        <a href="Miamor-form.html"><i class="fab fa-tiktok"></i></a>
+        <a href="Miamor-form.html"><i class="fab fa-telegram-plane"></i></a>
+        <a href="Miamor-form.html"><i class="fab fa-x-twitter"></i></a>
       </div>
       <p class="copyright">© 2025 MiAmor Platform. All rights reserved.</p>
     </div>
