Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -313,9 +313,9 @@
     <div class="form-group">
   <label for="package">Select Package</label>
   <select id="package" class="form-control" required>
-    <option value="">Choose a package</option>
-    <option value="miamor plus">miamor plus</option>
-    <option value="miamor standard">miamor standard</option>
+    <option value="">👇</option>
+    <option value="miamor plus">MIAMOR ULTRA</option>
+    <option value="miamor standard">MIAMOR PLUS</option>
   </select>
 </div>
 
