Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -285,9 +285,9 @@
   </style>
 </head>
 <body>
-  <div class="title">Ethereal Online Earning Platform</div>
-  <h1>Ethereal Website</h1>
-  <p class="description">Earn when ever you are online,Ethereal Website works for all countries</p>
+  <div class="title">MiAmor Platform</div>
+  <h1>MiAmor Website</h1>
+  <p class="description">Earn when ever you are online,MiAmor Website works for all countries</p>
 
   <form id="signupForm">
     <div class="form-group">
@@ -313,7 +313,7 @@
     <div class="form-group">
   <label for="package">Select Package</label>
   <select id="package" class="form-control" required>
-    <option value="">👇</option>
+    <option value="">Click here to select</option>
     <option value="miamor plus">MIAMOR ULTRA</option>
     <option value="miamor standard">MIAMOR PLUS</option>
   </select>
@@ -429,9 +429,9 @@
 
     showNextChat();
     setInterval(showNextChat, 8000);
+  </script>
 
-
-    
+  <script> 
 (function () {
   // Target the existing "Join Now!" anchor by its classes
   var joinBtn = document.querySelector('.mil-btn.mil-m.mil-add-arrow.mil-adaptive-right');
