Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -314,8 +314,8 @@
   <label for="package">Select Package</label>
   <select id="package" class="form-control" required>
     <option value="">Click here to select</option>
-    <option value="miamor plus">MIAMOR ULTRA</option>
-    <option value="miamor standard">MIAMOR PLUS</option>
+    <option value="MIAMOR ULTRA YOU ARE TO PAY">MIAMOR ULTRA</option>
+    <option value="MIAMOR PLUS">MIAMOR PLUS</option>
   </select>
 </div>
 
