miamor_payment_gateway.html

--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -246,7 +246,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Account Number</div>
-            <div id="accNo" class="value">6067151384</div>
+            <div id="accNo" class="value">7048831912</div>
           </div>
           <button class="copy-btn" data-copy="#accNo" aria-label="Copy account number">Copy 📋</button>
         </div>
@@ -262,7 +262,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Account Name</div>
-            <div id="accName" class="value">UBONG PETER ISONGUYO</div>
+            <div id="accName" class="value">GODWIN WISDOM AMADI</div>
           </div>
           <button class="copy-btn" data-copy="#accName" aria-label="Copy account name">Copy 📋</button>
         </div>
@@ -339,7 +339,7 @@
   var el = document.getElementById('chosen-package');
   if (!el) return;
   el.textContent = pkg
-    ? (name ? name + ', ' : '') + 'you selected: ' + pkg
+    ? (name ? name + ', ' : '') + 'Pay: ' + pkg
     : 'No package selected.';
 })();
 
