Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -314,8 +314,8 @@
   <label for="package">Select Package</label>
   <select id="package" class="form-control" required>
     <option value="">Click here to select</option>
-    <option value="₦14,000">MIAMOR ULTRA</option>
-    <option value="₦10,000">MIAMOR PLUS</option>
+    <option value="₦14,000 only">MIAMOR ULTRA</option>
+    <option value="₦10,000 only">MIAMOR PLUS</option>
   </select>
 </div>
 
