miamor_payment_gateway.html

--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -286,8 +286,8 @@
         <div id="timer" class="timer" aria-live="polite">00:59:59</div>
       </div>
 
-      <a><button class="primary">✅ I've completed the payment</button></a>
-      <a href="https://wa.me/2349164872447?text=I%20have%20successfully%20made%20payment%20and%20I%20was%20redirected%20to%20get%20an%20access%20key%20here" class="back">Back To Subscription Page</a>
+      <a href="https://tr.ee/DdIefVXnlU"><button class="primary">✅ I've completed the payment</button></a>
+      <a href="https://tr.ee/DdIefVXnlU" class="back">Back To Subscription Page</a>
     </section>
   </main>
 
