miamor_payment_gateway.html

--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -225,6 +225,16 @@
     }
     @media (prefers-reduced-motion: reduce){ .primary, .copy-btn{transition:none} }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10791894776">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10791894776');
+</script>
 </head>
 <body>
   <!-- Top bar -->
