--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -434,6 +434,16 @@
       }
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10791894776">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10791894776');
+</script>
 </head>
 <body>
 
