Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -283,6 +283,16 @@
       z-index: 1;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-10791894776">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-10791894776');
+</script>
 </head>
 <body>
   <div class="title">MiAmor Platform</div>
