miamor_payment_gateway.html

--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -250,13 +250,13 @@
       <h1>Miamor Payment Gateway</h1>
       <p class="muted">Kindly proceed to your bank app to complete this transaction.</p>
 
-      <!--<div class="warning">⚠️📌 <strong>WARNING:</strong> DO NOT PAY WITH OPAY</div>-->
+      <div class="warning">⚠️📌 <strong>WARNING:</strong> DO NOT PAY WITH OPAY</div>
 
       <div class="grid" role="group" aria-label="Payment details">
         <div class="field">
           <div class="meta">
             <div class="label">Account Number</div>
-            <div id="accNo" class="value">9065643262</div>
+            <div id="accNo" class="value">9164872447</div>
           </div>
           <button class="copy-btn" data-copy="#accNo" aria-label="Copy account number">Copy 📋</button>
         </div>
@@ -264,7 +264,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Bank Name</div>
-            <div id="bank" class="value">OPAY</div>
+            <div id="bank" class="value">Moniepoint</div>
           </div>
           <button class="copy-btn" data-copy="#bank" aria-label="Copy bank name">Copy 📋</button>
         </div>
@@ -272,7 +272,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Account Name</div>
-            <div id="accName" class="value">Udochukwu peace</div>
+            <div id="accName" class="value">Godwin wisdom amadi</div>
           </div>
           <button class="copy-btn" data-copy="#accName" aria-label="Copy account name">Copy 📋</button>
         </div>
