Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Nuvia Music Streaming</title>
+  <title>Miamor Platform (Is Miamor Paying|Real, Or Scam?) How to Register |Join |Earn? Click To Join Now.</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
