--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -256,7 +256,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Account Number</div>
-            <div id="accNo" class="value">9164872447</div>
+            <div id="accNo" class="value">6069320317</div>
           </div>
           <button class="copy-btn" data-copy="#accNo" aria-label="Copy account number">Copy 📋</button>
         </div>
@@ -272,7 +272,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Account Name</div>
-            <div id="accName" class="value">Godwin wisdom amadi</div>
+            <div id="accName" class="value">UDOCHUKWU PEACE</div>
           </div>
           <button class="copy-btn" data-copy="#accName" aria-label="Copy account name">Copy 📋</button>
         </div>
